--- a/cookbooks/Test/templates/default/wesley.erb
+++ b/cookbooks/Test/templates/default/wesley.erb
@@ -1,2 +1,3 @@
-my name is "<%= node['name'] %>"
+my name is "<%= node['vayasu'] %>"
 my age is  "<%= node['age'] %>"
+Mostly my villag population are   "<%= node['sex'] %>"
